<resources>
    <string name="app_name">Pet Protector</string>

    <string name="my_pets">Pet Listing</string>
    <string name="name">Name</string>
    <string name="details">Pet Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_button_text">Add Pet</string>
    <string name="enter">Enter Pet To Protect</string>
    <string name="photo">photo of pet</string>
    <string name="need_perms">Need permissions to proceed.</string>
    <string name="missing_info">Please fill out all of the information.</string>
    <string name="phone_too_long">Phone number is too long.</string>

</resources>
